--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,7 @@
     <p>Welcome to the chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      //inicjalizacja socketa (to request od klienta do serwera) - bedzie podtrzymywany az sami go zamkniemy
-      //io() nie jest funckja natywna dla JS - zaimportowalismy te biblioteke wyzej ;)
-      //UWAGA: io() to nie to samo io() co w server.js! Tu jest pure JS a tam Node'owe
-      let socket = io()
-
-      //inicjalizacja listenera (tu: nasluchuje na event = connect - odpali sie, gdy klient polaczy sie z serwerem)
-      socket.on('connect', () => {
-        console.log('Connected to server')
-      })
-
-      //inicjaizacja listenera (tu: nasluchuje na event = disconnect - czyli gdy padnie polaczenie, to listener wykona swoj kod)
-      socket.on('disconnect', () => {
-        console.log('Disconnected from server')
-      })
-    </script>
+    <script src="/js/index.js"></script>
   </body>
 
 </html>
